fix dark mode

--- a/frontend/src/shared/styles/globals.css
+++ b/frontend/src/shared/styles/globals.css
@@ -42,3 +42,11 @@ h1,h2,h3,h4,h5,h6 {
   font-weight: 700;
   letter-spacing: -0.02em;
 }
+
+body {
+  background-color: white;
+}
+
+.dark body {
+  background-color: rgb(2 6 23);
+}
